--- a/style.css
+++ b/style.css
@@ -43,13 +43,31 @@ h2 {
   color: whitesmoke;
 }
 
-.listItemContainer {
+.listItem {
   padding: 5px;
   background-color: #f0f9ff;
   color: #91cbe0;
+  margin-bottom: 5px;
+}
+.listItem span {
+  width: 80%;
+  box-sizing: border-box;
+  margin: auto 10px;
+  display: inline-block;
+  overflow: hidden;
   vertical-align: middle;
 }
-.listItemContainer p {
-  width: 80%;
+.listItem input[type='checkbox'] {
   display: inline-block;
+  vertical-align: middle;
+  width: 10%;
+}
+
+.listItem a {
+  text-decoration: none;
+  vertical-align: middle;
+}
+
+.strikethrough {
+  text-decoration: line-through;
 }
